--- a/app/src/main/res/layout/activity_tab.xml
+++ b/app/src/main/res/layout/activity_tab.xml
@@ -11,7 +11,8 @@
         android:id="@+id/tab"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        app:tabIndicatorHeight="0dp"
+        app:tabIndicatorHeight="2dp"
+        app:tabIndicatorColor="@android:color/holo_blue_bright"
         app:tabMode="scrollable"
         app:text_selected_color="#ff0000"
         app:text_size="14sp"
